--- a/SuppLocals/SuppLocals/MainWindow.xaml
+++ b/SuppLocals/SuppLocals/MainWindow.xaml
@@ -50,7 +50,8 @@
         <!--Services list-->
 
         <ListBox x:Name="servicesListBox" Grid.Column="2" Grid.Row="1" Grid.RowSpan="4" MinWidth="150" Margin="0 0 10 0"
-                 SelectionMode="Single"/>
+                 SelectionMode="Single" SelectionChanged="serviceChanged">
+        </ListBox>
 
         <!--Map-->
         <m:Map  Grid.Column="4" Grid.Row="1" Grid.RowSpan="4"
