--- a/SuppLocals/SuppLocals/MainWindow.xaml
+++ b/SuppLocals/SuppLocals/MainWindow.xaml
@@ -29,11 +29,11 @@
             <!--4-->
 
         </Grid.RowDefinitions>
-
+        
         <!--Place for a hyperlink to this site: https://lrv.lt/en-->
         <Rectangle Grid.ColumnSpan="6" Fill="LightGray"/>
         <TextBlock Text="All the information related to COVID-19 regulations. " HorizontalAlignment="Center" Grid.ColumnSpan="6" FontSize="13">
-           <Hyperlink NavigateUri="https://lrv.lt/en--">Read More</Hyperlink>
+           <Hyperlink Foreground="Black" NavigateUri="https://lrv.lt/en" RequestNavigate="hyperlinkRequestNavigate">Read More</Hyperlink>
         </TextBlock>
 
         <!--Create PushPins-->
