--- a/SuppLocals/SuppLocals/MainWindow.xaml
+++ b/SuppLocals/SuppLocals/MainWindow.xaml
@@ -21,11 +21,8 @@
         <Grid.RowDefinitions>
             <!--0-->
             <RowDefinition Height="25"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="150"/>
-            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
             <!--4-->
 
         </Grid.RowDefinitions>
@@ -38,33 +35,24 @@
 
 
         <!--Menu-->
+        <ScrollViewer x:Name="sPan" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" MinWidth="150" Margin="5 0 5 0" Visibility="Collapsed">
+            <StackPanel  Orientation="Vertical">
 
-        <StackPanel x:Name="sPan" Grid.Column="0" Grid.Row="1" MinWidth="150" Orientation="Vertical" Margin="10 0 10 0" Visibility="Collapsed">
+            <TextBlock Text="|Menu|" FontSize="30" HorizontalAlignment="Center" Margin="0 30 0 50"/>
 
-            <TextBlock Text="|Menu|" FontSize="30" HorizontalAlignment="Center" Margin="0 30 0 80"/>
-
-            <Button Width="150" Height="30" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center"  Background ="LightGray" >Services
+            <Button Width="150" Height="30" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center"  Background ="LightGray" Click="servicesClick">Services
+                
                 <Button.Resources>
                     <Style TargetType="Border">
                         <Setter Property="CornerRadius" Value="4"/>
                     </Style>
                 </Button.Resources>
-            </Button>
-
-
-            <Button Width="150" Height="30" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center"  Background ="LightGray" >Reviews
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="4"/>
-                    </Style>
-                </Button.Resources>
+                
             </Button>
 
             <!--Create PushPins-->
-
-
-                <!--Services list-->
-            <StackPanel Grid.Column="1" Grid.Row="1" MinWidth="150" Orientation="Vertical" Margin="0 0 10 0">
+            <!--Services list-->
+            <StackPanel Name="servicePanel" Grid.Column="1" Grid.Row="1" MinWidth="150" Orientation="Vertical" Margin="5 0 5 10" Visibility="Collapsed">
                 <TextBlock Text="Service type" Padding="5" HorizontalAlignment="Center" />
                 <ComboBox x:Name="createServiceCB"/>
 
@@ -73,9 +61,19 @@
                 <Button x:Name="confirmBtn" Click="addPushPin" Content="Confirm"/>
             </StackPanel>
 
+
+            <Button Width="150" Height="30" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center"  Background ="LightGray" Click="filterClick">Filters
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="4"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+
+         
             <!--Filters-->
 
-            <StackPanel Grid.Column="1" Grid.Row="4" MinWidth="150" Orientation="Vertical" Margin="0 0 10 0">
+            <StackPanel Name="filterPanel" Grid.Column="1" Grid.Row="4" MinWidth="150" Orientation="Vertical" Margin="5 0 5 10" Visibility="Collapsed">
                 <TextBlock Text="Filter:" Padding="5" HorizontalAlignment="Center" />
                 <ComboBox x:Name="filterServiceTypeCB" SelectionChanged="updateServiceListAndMap"/>
                 <CheckBox x:Name="filterDistanceCheck" Margin="0 10 0 0" Content="Filter by distance" Checked="distanceFilterChecked" Unchecked="distanceFilterUnchecked" />
@@ -90,19 +88,31 @@
 
             </StackPanel>
 
-            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="25" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Left"  Background ="White">?</Button>
+
+            <Button Width="150" Height="30" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center"  Background ="LightGray" >Reviews
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="4"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+
+            <!-- About (help) button-->
+
+            <DockPanel>
+                <Button DockPanel.Dock="Bottom" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="25" FontSize="16" VerticalAlignment="Stretch" HorizontalAlignment="Left"  Background ="White">?</Button>
+            </DockPanel>
         </StackPanel>
+        </ScrollViewer>
 
-        
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="25" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Right"  Background ="White" Click="buttonClick">☰</Button>
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="25" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Right"  Background ="LightGray" Click="buttonClick">☰</Button>
 
-
-        <ListBox x:Name="servicesLB" Grid.Column="2" Grid.Row="1" Grid.RowSpan="4" MinWidth="150" Margin="0 0 10 0"
+        <ListBox x:Name="servicesLB" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" MinWidth="150" Margin="0 0 10 0"
                  SelectionMode="Single" SelectionChanged="serviceChanged">
         </ListBox>
 
         <!--Map-->
-        <m:Map  Grid.Column="4" Grid.Row="1" Grid.RowSpan="4"
+        <m:Map  Grid.Column="4" Grid.Row="1" Grid.RowSpan="2"
             x:Name="myMap" CredentialsProvider="vuOU7tN47KBhly1BAyhi~SKpEroFcVqMGYOJVSj-2HA~AhGXS-dV_H6Ofvn920LLMyvxfUUaLfjpZTD54fSc3WO-qRE7x6225O22AP_0XjDn"
             Mode="Road" Center="54.68,25.27" ZoomLevel="12" Heading="0">
         </m:Map>
