--- a/SuppLocals/SuppLocals/MainWindow.xaml
+++ b/SuppLocals/SuppLocals/MainWindow.xaml
@@ -119,9 +119,9 @@
 
         <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="25" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Right"  Background ="LightGray" Click="buttonClick">☰</Button>
 
-        <ListBox x:Name="servicesLB" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" MinWidth="150" Margin="0 0 10 0"
+        <ListView  x:Name="servicesLB" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" MinWidth="150" Margin="0 0 10 0"
                  SelectionMode="Single" SelectionChanged="serviceChanged">
-        </ListBox>
+        </ListView>
 
         <!--Map-->
         <m:Map  Grid.Column="4" Grid.Row="1" Grid.RowSpan="2"
