--- a/SuppLocals/SuppLocals/ProgressDialog.xaml
+++ b/SuppLocals/SuppLocals/ProgressDialog.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SuppLocals"
         mc:Ignorable="d"
         Height="250" Width="400"
-        WindowStyle="None"
+        WindowStyle="None" WindowStartupLocation="CenterOwner" Background="LightGray"
         MouseDown="Window_MouseDown" ResizeMode="NoResize">
     <Window.Resources>
         <Storyboard x:Key="Storyboard1" AutoReverse="True" RepeatBehavior="Forever">
