--- a/SuppLocals/SuppLocals/ReviewsWindow.xaml
+++ b/SuppLocals/SuppLocals/ReviewsWindow.xaml
@@ -55,7 +55,7 @@
             <TextBox x:Name="reviewer" Margin="10 0 0 0" Height="20" Width="150" MaxLength="15" TextWrapping="NoWrap"/>
         </StackPanel>
 
-        <Border BorderBrush="Black" BorderThickness="2" Grid.Column="2" Grid.Row="3"  Margin="10 0 5 0">
+        <Border BorderBrush="LightGray" BorderThickness="2" Grid.Column="2" Grid.Row="3"  Margin="10 0 5 0">
             <ScrollViewer>
                 <TextBox x:Name="coments" Height="auto" Width="auto" TextWrapping="Wrap"/>
             </ScrollViewer>
